// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a child even if a caption is provided 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 10px 0 10px 0;
}

.c1 {
  padding: 0;
  width: 100%;
  word-break: break-word;
}

.c1 > p,
.c1 p,
.c1 .public-DraftEditorPlaceholder-root,
.c1 .public-DraftStyleDefault-block {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
  color: #999;
  margin: 0;
  display: inline;
}

.c1 > a,
.c1 a {
  color: #999;
}

.c1 > a:hover,
.c1 a:hover {
  color: black;
}

@media (max-width:600px) {
  .c0 {
    padding: 0px 10px;
  }
}

@media (max-width:600px) {
  .c1 {
    padding: 0px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div>
      Here is a passed child
    </div>
  </div>
</div>
`;

exports[`renders a saved caption properly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 10px 0 10px 0;
}

.c1 {
  padding: 0;
  width: 100%;
  word-break: break-word;
}

.c1 > p,
.c1 p,
.c1 .public-DraftEditorPlaceholder-root,
.c1 .public-DraftStyleDefault-block {
  font-family: Unica77LLWebRegular,Arial,serif;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
  line-height: 1.4em;
  color: #999;
  margin: 0;
  display: inline;
}

.c1 > a,
.c1 a {
  color: #999;
}

.c1 > a:hover,
.c1 a:hover {
  color: black;
}

@media (max-width:600px) {
  .c0 {
    padding: 0px 10px;
  }
}

@media (max-width:600px) {
  .c1 {
    padding: 0px;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "<p>This is a saved caption</p>",
        }
      }
    />
  </div>
</div>
`;
